[package]
name = "robotics-zero"
version = "0.1.0"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"

[dependencies]
num = "*"

[dependencies.num-traits]
version = "*"
default-features = false
features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`
[dev-dependencies]
approx = "*"
